--- a/css/styles.scss
+++ b/css/styles.scss
@@ -19,10 +19,13 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 // 5. Du kan lave styling her...
 
 .navbar{
-	height: 10vh;
+
+}
+.navbar-b{
+	border: none;
 }
 .header{
-	background-color: rgba(0, 0, 0, 0.97);
+	background-color: rgba(12, 12, 12, 0.97);
 	height: 100vh;
 	background-position: right 600rem;
 	background-size: 25px 25px;
@@ -107,14 +110,12 @@ height: 50vh;
 	transition: 500ms;
 }
 .panel2 {
-
 	object-fit: cover;
 	width: 100%;
 	height: 100%;
 	transition: 500ms;
 }
 .panel3 {
-
 	object-fit: cover;
 	width: 100%;
 	height: 100%;
@@ -141,8 +142,8 @@ height: 50vh;
 }
 //Dark-mode-end//
 .switch {
-	height: 30px;
-	width: 75px;
+	height: 28px;
+	width: 29px;
 	background-color: white;
 	border-radius: 20px;
 }
@@ -152,16 +153,17 @@ height: 50vh;
 	height: 0;
 }
 .slider{
+	transform: translateX(-10px);
 	border-radius: 25px;
 	position: absolute;
 	height: 20px;
 	width: 20px;
 	cursor: pointer;
-	background-color: #aa69ea;
+	background-color: #db6fe5;
 	transition: 400ms;
 }
 input:checked + .slider {
-	transform: translateX(26px);
-	background-color: #1f1f1f;
+	background-color: #282828;
 	transition: 400ms;
+
 }
